Eliminar sección Call for Proposals

--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
                         <a href="#about">Acerca de</a>
                       </li>
                       <li>
-                        <a href="#c4p">C4P</a>
-                      </li>
-                      <li>
-                        <a href="#Patrocinadores">Patrocinadores</a>
+                        <a href="#patrocinadores">Patrocinadores</a>
                       </li>
                       <li><a href="#contact">Contacto</a></li>
                     </ul>
@@ -631,97 +628,14 @@
 
       <!-- FIN ACERCA DE LA PYCON -->
 
-      <!-- About Section Two -->
-      <section
-        class="about-section-two style-two"
-        style="background-image: url(images/background/17.jpg)"
-        id="c4p"
-      >
-        <div class="parallax-scene parallax-scene-1 anim-icons">
-          <span
-            data-depth="0.60"
-            class="parallax-layer icon icon-dots-2"
-          ></span>
-          <span
-            data-depth="0.70"
-            class="parallax-layer icon icon-dots-3"
-          ></span>
-        </div>
 
-        <div class="auto-container">
-          <div class="sec-title text-center">
-            <h2>Llamada a <br />Propuestas</h2>
-          </div>
-
-            <div class="content-box">
-                <div class="text">Saber <b>expresar nuestras ideas</b> de forma clara y concisa es muy valioso, no solo para conferencias, sino también para cualquier otro ámbito donde la comunicación oral sea la base de la colaboración o actividad, por ello queremos invitarte a que participes en la PyConES 2021 y puedas así compartir junto a la comunidad hispanohablante de Python ese proyecto o idea interesante que llevas tiempo trabajando o tienes en mente, o la experiencia que has tenido en el último tiempo. <br><br>
-
-                  Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el domingo, <strike>2 de mayo</strike> <b>16 de mayo</b>. Esto incluye tanto charlas como talleres.
-                <br>
-                <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@2021.es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
-                <br>
-                <br>Estamos buscando personas de <b>todos los niveles y campos de experiencia</b>, para que con tu ayuda podamos definir una conferencia dedicada a todas las personas de la comunidad.
-                <br>
-                <br>Para la versión de este año estamos buscando charlas y talleres. Las charlas tendrán una <b>duración de 20 minutos</b>, más 10 minutos de preguntas, y los talleres un <b>máximo de 4 horas</b>. Esto nos dará la oportunidad de crear un programa variado y adecuado para los 2 días de conferencia.
-                <br>
-                <br>
-                <b>Valoramos</b> mucho las personas que estén desarrollando proyectos:
-                <ul class="valuable-points">
-                <li>con un enfoque social,</li>
-                <li>saltos entre distintos campos profesionales,</li>
-                <li>o simplemente la experiencia de Python y el impacto en tu vida.</li>
-                </ul>
-                Además de temáticas interesantes como, pero sin estar limitado a:
-                <ul class="valuable-points">
-                <li><b>Core</b> - Características del lenguaje, implementaciones de Python (CPython, Pypy,...), extensión de Python y biblioteca estándar, aspectos internos del lenguaje</li>
-                <li><b>Comunidad, sociedad y cultura</b> - Diversidad, salud, productividad, problemas en el sector tecnológico/comunidad, privacidad, participación ciudadana, proyectos tecnológicos con fines sociales,…
-                <li><b>Ciencia de datos, Machine Learning e IA</b>
-                <li><b>Computación científica</b> - Uso de Python en ciencia e investigación: SIG, matemáticas, simulaciones, espacio, bioingeniería,…
-                <li><b>Web</b> - Desarrollo Web, APIs, Microservicios,…
-                <li><b>Aplicaciones de Escritorio</b> - Qt, GTK+, Tkinter, Gnome, KDE, Accesibilidad,…
-                <li><b>Videojuegos y Diseño</b> - Python en el desarrollo de videojuegos, animación, modelado 3D,…
-                <li><b>Python Embebido e IoT</b> - MicroPython, robótica, Arduino, Raspberry Pi,…
-                <li><b>Sys / DevOps</b> - Herramientas de desarrollo y automatización, tests, CI / CD, contenedores, orquestación, registro y monitorización,…
-                <li><b>Redes y seguridad</b> - Programación de redes, seguridad de redes, cifrado,...
-                </ul>
-                <br>
-                Recuerda que <b>se votarán las propuestas</b> en base a su descripción, contenido y toda la información que nos quieras dar. Acá tienes unas ideas:
-                <ul class="valuable-points">
-                  <li>¿Qué te motivó a hacer esta charla?</li>
-                  <li>¿Estás resolviendo algún problema conocido? ¿Cuál?</li>
-                  <li>¿Es una charla sobre una experiencia personal o de comunidad?</li>
-                  <li>¿Hablas sobre un módulo o funcionalidad importante?</li>
-                  <li>Señalar "¿Qué aprenderán?" lo que las personas que participen en tu charla.</li>
-                </ul>
-                <br>
-                <br>Envía tu propuesta de charla en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta de charla</a>
-
-                <br>O bien envíanos tu propuesta de taller en el siguiente enlace: <a href="https://forms.gle/fPfVJLtUyiixbvMJ9">Enviar Propuesta de taller</a>
-
-                <br>
-                <br>
-                Consideraciones adicionales:
-                <ul class="valuable-points">
-                <li>Es posible enviar más de una propuesta por persona,</li>
-                <li>Se aceptan charlas con varias personas como ponentes,</li>
-                <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
-                </ul>
-                </div>
-                <div class="btn-container">
-                  <div class="btn-box"><a href="https://forms.gle/baya52oZJo6KMat17" class="theme-btn btn-style-one">Enviar propuesta de charla <span class="flaticon-arrow"></span></a></div>
-                  <div class="btn-box"><a href="https://forms.gle/fPfVJLtUyiixbvMJ9" class="theme-btn btn-style-one">Enviar propuesta de taller <span class="flaticon-arrow"></span></a></div>
-                </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
 
 <!-- SECCION PATROCINADORES  -->
       <section
         class="about-section-two style-two"
         style="background-image: url(images/background/9.jpg)"
-        id="Patrocinadores"
+        id="patrocinadores"
       >
 
 
@@ -748,12 +662,7 @@
         </div><!--Auto-container-->
       </section>
 
-
-
-
-
-
-
+      
       <div style="padding-top:20px; background-color: #ffc600;"></div>
 
       <!-- Main Footer -->
