Logos transparentes y ajustes de estructura.

--- a/index.html
+++ b/index.html
@@ -637,50 +637,47 @@
 
       <div class="auto-container">
 
+        <div class="sec-title text-center">
+          <h2>Patrocinadores</h2>
+        </div>
+
           <div class="sponsors-outer">
             <div class="gold-sponsors">
-              <h4>Gold Sponsors</h4>
+              <h4>Oro</h4>
                 <!--Sponsors Carousel-->
-                <ul class="gold-carousel owl-carousel owl-theme">
-                    <li class="slide-item"><figure class="image"><a href="https://ravenloop.io/"><img src="images/sponsors/Logo ravenloop.jpg" alt=""></a></figure>
+                <ul>
+                    <li class="slide-item"><figure class="image"><a href="https://ravenloop.io/"><img src="images/sponsors/Logo ravenloop-transparente.png" alt="ravenloop"></a></figure>
                     <p style="text-align: center">En un mundo digital e interconectado, con ataques cada vez más sofisticados, personalizados y numerosos, aportamos información crítica y conocimiento profundo sobre amenazas, fundamental para extraer todo el potencial de sus soluciones de ciberseguridad y garantizar la resiliencia de su organización.</p>
                     </li>
                     
-                    <li class="slide-item"><figure class="image"><a href="#"><img src="" alt=""></a></figure></li>
-                    <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-3.png" alt=""></a></figure></li>
+                    <li class="slide-item"><figure class="image"><a href="https://intelygenz.com/join-us/"><img src="images/sponsors/Intelygenz-Logo-transparente.png" alt="intelygenz"></a></figure>
+                    <p style="text-align: center">Somos un equipo de 170 developers, visionari@s y apasionad@s por aprender, muy enfocados al negocio a través del desarrollo de IA, automatización y product solutions. Nuestra cultura es work-life balance con un modelo de trabajo 100% híbrido (tanto en España como en San Francisco).</p>
+                    </li>
                 </ul>
             </div>
 
             <div class="silver-sponsors">
-                <h4>Silver Sponsors</h4>
-                <!--Sponsors Carousel-->
-                <ul class="silver-carousel owl-carousel owl-theme">
-                  <li class="slide-item"><figure class="image"><a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605"><img src="images/sponsors/Logo mckinsey.png" alt=""></a></figure>
+                <h4>Plata</h4>
+                <ul>
+                  <li class="slide-item"><figure class="image"><a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605"><img src="images/sponsors/Logo-mckinsey-transparente.png" alt="mckinsey"></a></figure>
                   <p style="text-align: center">McKinsey & Company is a Management and Strategy Consulting firm. We help organizations across the private, public, and social sectors create the change that matters. Our Data Scientists work on a number of different real-life problems, applying state-of-the-art Machine Learning techniques to solve these very challenging issues.</p>
                   </li>
-                  <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-6.png" alt=""></a></figure></li>
-                  <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-7.png" alt=""></a></figure></li>
                 </ul>
             </div>
 
-            <div class="bronze-sponsors">
-              <h4>Bronze Sponsors</h4>
-              <!--Sponsors Carousel-->
-              <ul class="bronze-carousel owl-carousel owl-theme">
+            <!-- <div class="bronze-sponsors">
+              <h4>Bronce</h4>
+              <ul>
                   <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-5.png" alt=""></a></figure></li>
                   <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-6.png" alt=""></a></figure></li>
                   <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-7.png" alt=""></a></figure></li>
               </ul>
-          </div>
+            </div> -->
         </div>
       </div>
 
 
         <div class="auto-container" style="margin-top:2%">
-          <div class="sec-title text-center">
-            <h2>Patrocinadores</h2>
-          </div>
-
             <div class="content-box">
                 <div class="text">
                   <p>El patrocinio permite que el evento sea <strong>gratuito y universal</strong>, que haya más público y se alcance mayor difusión.</p>
