--- a/index.html
+++ b/index.html
@@ -646,12 +646,15 @@
               <h4>Oro</h4>
                 <!--Sponsors Carousel-->
                 <ul>
+                    <li class="slide-item"><figure class="image"><a href="https://www.codesyntax.com/"><img src="images/sponsors/LogoCodeSyntax-transparente.png" alt="codesyntax"></a></figure>
+                    <p>Python es nuestro lenguaje favorito. Plone, Zope, Django, apps, IoT, analítica,... en aplicaciones, productos y desarrollos para clientes industriales o de servicios, administración, proyectos propios y de I+D en CodeSyntax.</p>
+                    </li>
                     <li class="slide-item"><figure class="image"><a href="https://ravenloop.io/"><img src="images/sponsors/Logo ravenloop-transparente.png" alt="ravenloop"></a></figure>
-                    <p style="text-align: center">En un mundo digital e interconectado, con ataques cada vez más sofisticados, personalizados y numerosos, aportamos información crítica y conocimiento profundo sobre amenazas, fundamental para extraer todo el potencial de sus soluciones de ciberseguridad y garantizar la resiliencia de su organización.</p>
+                    <p>En un mundo digital e interconectado, con ataques cada vez más sofisticados, personalizados y numerosos, aportamos información crítica y conocimiento profundo sobre amenazas, fundamental para extraer todo el potencial de sus soluciones de ciberseguridad y garantizar la resiliencia de su organización.</p>
                     </li>
                     
                     <li class="slide-item"><figure class="image"><a href="https://intelygenz.com/join-us/"><img src="images/sponsors/Intelygenz-Logo-transparente.png" alt="intelygenz"></a></figure>
-                    <p style="text-align: center">Somos un equipo de 170 developers, visionari@s y apasionad@s por aprender, muy enfocados al negocio a través del desarrollo de IA, automatización y product solutions. Nuestra cultura es work-life balance con un modelo de trabajo 100% híbrido (tanto en España como en San Francisco).</p>
+                    <p>Somos un equipo de 170 developers, visionari@s y apasionad@s por aprender, muy enfocados al negocio a través del desarrollo de IA, automatización y product solutions. Nuestra cultura es work-life balance con un modelo de trabajo 100% híbrido (tanto en España como en San Francisco).</p>
                     </li>
                 </ul>
             </div>
@@ -660,7 +663,7 @@
                 <h4>Plata</h4>
                 <ul>
                   <li class="slide-item"><figure class="image"><a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605"><img src="images/sponsors/Logo-mckinsey-transparente.png" alt="mckinsey"></a></figure>
-                  <p style="text-align: center">McKinsey & Company is a Management and Strategy Consulting firm. We help organizations across the private, public, and social sectors create the change that matters. Our Data Scientists work on a number of different real-life problems, applying state-of-the-art Machine Learning techniques to solve these very challenging issues.</p>
+                  <p>McKinsey & Company is a Management and Strategy Consulting firm. We help organizations across the private, public, and social sectors create the change that matters. Our Data Scientists work on a number of different real-life problems, applying state-of-the-art Machine Learning techniques to solve these very challenging issues.</p>
                   </li>
                 </ul>
             </div>
