--- a/index.html
+++ b/index.html
@@ -665,6 +665,9 @@
                   <li class="slide-item"><figure class="image"><a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605"><img src="images/sponsors/Logo-mckinsey-transparente.png" alt="mckinsey"></a></figure>
                   <p>McKinsey & Company is a Management and Strategy Consulting firm. We help organizations across the private, public, and social sectors create the change that matters. Our Data Scientists work on a number of different real-life problems, applying state-of-the-art Machine Learning techniques to solve these very challenging issues.</p>
                   </li>
+                  <li class="slide-item"><figure class="image"><a href="https://www.photopills.com" title="PhotoPills: Imagine, Plan, Shoot!"><img src="images/sponsors/photophills-transparente.png" alt="photopills"></a></figure>
+                    <p>PhotoPills is your photography planning app. It helps you PLAN your photos ahead of time… So you’re always at the right place at the right time to capture the best photo possible and turn your photography ideas into reality.</p>
+                    </li>
                 </ul>
             </div>
 
