Añadir logo Cometa bronce

--- a/index.html
+++ b/index.html
@@ -671,14 +671,12 @@
                 </ul>
             </div>
 
-            <!-- <div class="bronze-sponsors">
+            <div class="bronze-sponsors">
               <h4>Bronce</h4>
               <ul>
-                  <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-5.png" alt=""></a></figure></li>
-                  <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-6.png" alt=""></a></figure></li>
-                  <li class="slide-item"><figure class="image"><a href="#"><img src="images/clients/2-7.png" alt=""></a></figure></li>
+                  <li class="slide-item"><figure class="image"><a href="https://www.desarrollocometa.com/"><img src="images/sponsors/logo-cometa-transparente.png" alt="cometa"></a></figure></li>
               </ul>
-            </div> -->
+            </div>
         </div>
       </div>
 
