--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -758,11 +758,29 @@
             <div class="silver-sponsors">
                 <h4>Plata</h4>
                 <ul>
-                   <li class="slide-item"><figure class="image"><a href="https://cursosdedesarrollo.com/"><img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"></a></figure>
-￼                  <p>Python nos ha dado un gran lenguaje y unas bibliotecas excelentes que usamos desde hace años. Esperamos que este granito de arena ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
+                   <li class="slide-item">
+                     <figure class="image">
+                       <a href="https://cursosdedesarrollo.com/">
+                         <img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"/>
+                       </a>
+                     </figure>
+￼                    <p>Python nos ha dado un gran lenguaje y unas bibliotecas
+                      excelentes que usamos desde hace años. Esperamos que este granito de arena
+                      ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
 ￼                  </li>
-                  <li class="slide-item"><figure class="image"><a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605"><img src="images/sponsors/Logo-mckinsey-transparente.png" alt="mckinsey"></a></figure>
-                  <p>McKinsey &amp; Company is a Management and Strategy Consulting firm. We help organizations across the private, public, and social sectors create the change that matters. Our Data Scientists work on a number of different real-life problems, applying state-of-the-art Machine Learning techniques to solve these very challenging issues.</p>
+                  <li class="slide-item">
+                    <figure class="image">
+                      <a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605">
+                        <img src="images/sponsors/Logo-mckinsey-transparente.png" alt="mckinsey"/>
+                      </a>
+                    </figure>
+                    <p>McKinsey &amp; Company is a Management and Strategy
+                      Consulting firm. We help organizations across the
+                      private, public, and social sectors create the change
+                      that matters. Our Data Scientists work on a number of
+                      different real-life problems, applying state-of-the-art
+                      Machine Learning techniques to solve these very challenging
+                      issues.</p>
                   </li>
                   <li class="slide-item"><figure class="image"><a href="https://www.photopills.com" title="PhotoPills: Imagine, Plan, Shoot!"><img src="images/sponsors/photophills-transparente.png" alt="photopills"></a></figure>
                     <p>PhotoPills is your photography planning app. It helps you PLAN your photos ahead of time… So you’re always at the right place at the right time to capture the best photo possible and turn your photography ideas into reality.</p>
