--- a/index.html
+++ b/index.html
@@ -2124,8 +2124,15 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
             <div class="silver-sponsors">
                 <h4>Plata</h4>
                 <ul>
-                   <li class="slide-item"><figure class="image"><a href="https://cursosdedesarrollo.com/"><img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"></a></figure>
-￼                  <p>Python nos ha dado un gran lenguaje y unas bibliotecas excelentes que usamos desde hace años. Esperamos que este granito de arena ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
+                   <li class="slide-item">
+                     <figure class="image">
+                       <a href="https://cursosdedesarrollo.com/">
+                         <img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"/>
+                       </a>
+                     </figure>
+￼                    <p>Python nos ha dado un gran lenguaje y unas bibliotecas
+                      excelentes que usamos desde hace años. Esperamos que este granito de arena
+                      ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
 ￼                  </li>
                   <li class="slide-item"><figure class="image"><a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605"><img src="images/sponsors/Logo-mckinsey-transparente.png" alt="mckinsey"></a></figure>
                   <p>McKinsey &amp; Company is a Management and Strategy Consulting firm. We help organizations across the private, public, and social sectors create the change that matters. Our Data Scientists work on a number of different real-life problems, applying state-of-the-art Machine Learning techniques to solve these very challenging issues.</p>
