Add speaker: Cristián Maureira-Fredes

--- a/index.html
+++ b/index.html
@@ -2113,7 +2113,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Cristián Maureira-Fredes"></figure>
+                          <figure class="thumbs-box"><img src="images/cristian_maureira_fredes.jpg" alt="Cristián Maureira-Fredes"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>12:55 - 13:25</div>
                             <h4>Hackeando CPython de forma divertida</h4>
