--- a/index.html
+++ b/index.html
@@ -2407,7 +2407,22 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                   </li>
                   <li class="slide-item"><figure class="image"><a href="https://www.photopills.com" title="PhotoPills: Imagine, Plan, Shoot!"><img src="images/sponsors/photophills-transparente.png" alt="photopills"></a></figure>
                     <p>PhotoPills is your photography planning app. It helps you PLAN your photos ahead of time… So you’re always at the right place at the right time to capture the best photo possible and turn your photography ideas into reality.</p>
-                    </li>
+                  </li>
+                  <li class="slide-item">
+                    <figure class="image">
+                      <a href="https://4geeksacademy.com/es/inicio/?lang=es">
+                        <img src="images/sponsors/Logo-4GeeksAcademy.png" alt="Logo de 4Geeks Academy"/>
+                      </a>
+                    </figure>
+                    <p>
+                      4Geeks Academy es el lugar para impulsar tu carrera
+                      profesional aprendiendo a programar. Formamos desarrolladores
+                      en tan solo unos meses a través de una experiencia educativa
+                      flexible, intensa y premium. Impulsa tu talento y únete a la
+                      comunidad tech de impulso de carrera más importante para
+                      desarrolladores presentes y futuros.
+                    </p>
+                  </li>
                 </ul>
             </div>
 
