Add speaker: Miguel Jiménez García

--- a/index.html
+++ b/index.html
@@ -1580,7 +1580,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Miguel Jiménez"></figure>
+                          <figure class="thumbs-box"><img src="images/miguel_jimenez.jpg" alt="Miguel Jiménez"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>10:20 - 10:50</div>
                             <h4>Adiós Django: tu API usando solo Python</h4>
@@ -2287,6 +2287,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
     </section>
     <!--End Shedule Section -->
 
+      
 <!-- SECCION TALLER DE PYLADIES  -->
 <section class="clients-section style-three" style="background-image: url(images/background/9.jpg);"
         id="tallerpyladies">
