--- a/index.html
+++ b/index.html
@@ -1550,7 +1550,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Indranil Ghosh"></figure>
+                          <figure class="thumbs-box"><img src="images/indranil_ghosh.jpg" alt="Indranil Ghosh"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>09:45 - 10:15</div>
                             <h4>An introduction to hands-on football data analysis in Python</h4>
