--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Jordi Saludes Closa"></figure>
+                          <figure class="thumbs-box"><img src="images/jordi_saludes_closa.jpg" alt="Jordi Saludes Closa"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>12:55 - 13:25</div>
                             <h4>Reales de verdad</h4>
