Add speaker: Juan Francisco Huete Verdejo

--- a/index.html
+++ b/index.html
@@ -1324,7 +1324,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Juan Francisco Huete Verdejo"></figure>
+                          <figure class="thumbs-box"><img src="images/juan_francisco_huete_verdejo.jpg" alt="Juan Francisco Huete Verdejo"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>12:55 - 13:25</div>
                             <h4>Como compartir grandes Datasets entre procesos sin perder la salud mental</h4>
