--- a/index.html
+++ b/index.html
@@ -1294,7 +1294,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Jose Manuel Ortega"></figure>
+                          <figure class="thumbs-box"><img src="images/jose_manuel_ortega.jpg" alt="Jose Manuel Ortega"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>12:20 - 12:50</div>
                             <h4>Python para equipos de ciberseguridad</h4>
