Add speaker: Ismael Mendonça

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Ismael Mendonça"></figure>
+                          <figure class="thumbs-box"><img src="images/ismael_mendonca.jpg" alt="Ismael Mendonça"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>10:20 - 10:50</div>
                             <h4>Python testing best practices</h4>
