Add speaker: Tomás Garzón Hervás

--- a/index.html
+++ b/index.html
@@ -1978,7 +1978,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Tomás Garzón Hervás"></figure>
+                          <figure class="thumbs-box"><img src="images/tomas_garzon_hervas.jpg" alt="Tomás Garzón Hervás"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>10:20 - 10:50</div>
                             <h4>Entrega tu producto como una API</h4>
