Add speaker: Juan Luis Cano Rodríguez

--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Juan Luis Cano Rodríguez"></figure>
+                          <figure class="thumbs-box"><img src="images/juan_luis_cano_rodriguez.jpg" alt="Juan Luis Cano Rodríguez"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>11:45 - 12:15</div>
                             <h4>Documenta tu proyecto con Markdown, Sphinx, y Read the Docs</h4>
