Añadir patrocinador Idecrea +ajustes CSS

--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -872,6 +872,18 @@
                       desarrolladores presentes y futuros.
                     </p>
                   </li>
+                  <li class="slide-item">
+                    <figure class="image">
+                      <a href="https://idecrea.es">
+                        <img src="images/sponsors/logo-idecrea-transparente.png" alt="Idecrea" />
+                      </a>
+                    </figure>
+                    <p>
+                      Desde Idecrea, escuela de diseño y creación digital apostamos Python, Django o Flask a través de una formación de
+                      calidad en nuestros cursos y Másters profesionales en diseño y desarrollo web tanto en modalidad presencial u
+                      online. ¡Fórmate en con nosotros!
+                    </p>
+                  </li>
                 </ul>
             </div>
 
