--- a/index.html
+++ b/index.html
@@ -2056,7 +2056,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Jesús Huerta y Albert Solana"></figure>
+                          <figure class="thumbs-box"><img src="images/jesus_huerta_y_albert_solana.jpg" alt="Jesús Huerta y Albert Solana"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>11:45 - 12:15</div>
                             <h4>Un salto cuántico con Python: experiencia en programación cuántica desde cero</h4>
