--- a/index.html
+++ b/index.html
@@ -1610,7 +1610,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Azucena González Muiño"></figure>
+                          <figure class="thumbs-box"><img src="images/azucena_gonzalez_muino.jpg" alt="Azucena González Muiño"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>10:55 - 11:25</div>
                             <h4>Minority Report en Londres: Un análisis de las consecuencias del sesgo en la policía predictiva</h4>
