--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Jaime Crespo"></figure>
+                          <figure class="thumbs-box"><img src="images/jaime_crespo.jpg" alt="Jaime Crespo"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>09:45 - 10:15</div>
                             <h4>Haciendo copias de seguridad de todo el conocimiento humano con Python y software libre</h4>
