removed weird characters that appeared again in sponsors section

--- a/index.html
+++ b/index.html
@@ -2388,10 +2388,10 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                          <img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"/>
                        </a>
                      </figure>
-￼                    <p>Python nos ha dado un gran lenguaje y unas bibliotecas
+                     <p>Python nos ha dado un gran lenguaje y unas bibliotecas
                       excelentes que usamos desde hace años. Esperamos que este granito de arena
                       ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
-￼                  </li>
+                    </li>
                   <li class="slide-item">
                     <figure class="image">
                       <a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605">
