--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -735,7 +735,6 @@
     </section>
     <!--End Shedule Section -->
 
-      
 <!-- SECCION TALLER DE PYLADIES  -->
 <section class="clients-section style-three" style="background-image: url(images/background/9.jpg);"
         id="tallerpyladies">
@@ -836,10 +835,10 @@
                          <img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"/>
                        </a>
                      </figure>
-￼                    <p>Python nos ha dado un gran lenguaje y unas bibliotecas
+                     <p>Python nos ha dado un gran lenguaje y unas bibliotecas
                       excelentes que usamos desde hace años. Esperamos que este granito de arena
                       ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
-￼                  </li>
+                  </li>
                   <li class="slide-item">
                     <figure class="image">
                       <a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605">
