--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Carlos Alberto Gomez Gonzalez"></figure>
+                          <figure class="thumbs-box"><img src="images/carlos_alberto_gomez_gonzalez.jpg" alt="Carlos Alberto Gomez Gonzalez"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>11:45 - 12:15</div>
                             <h4>Deep learning-based super-resolution of climate forecast data</h4>
@@ -2388,10 +2388,10 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
                          <img src="images/sponsors/Logo-cursosdedesarrollo.png" alt="cursos de desarrollo"/>
                        </a>
                      </figure>
-                     <p>Python nos ha dado un gran lenguaje y unas bibliotecas
+￼                    <p>Python nos ha dado un gran lenguaje y unas bibliotecas
                       excelentes que usamos desde hace años. Esperamos que este granito de arena
                       ayude a crecer esta comunidad. ¡Gracias por todo lo aportado!</p>
-                  </li>
+￼                  </li>
                   <li class="slide-item">
                     <figure class="image">
                       <a href="https://www.mckinsey.com/careers/search-jobs/jobs/datascientist-advancedanalytics-19605">
