--- a/index.html
+++ b/index.html
@@ -862,7 +862,7 @@
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Carlos Alberto Gomez Gonzalez"></figure>
+                          <figure class="thumbs-box"><img src="images/carlos_alberto_gomez_gonzalez.jpg" alt="Carlos Alberto Gomez Gonzalez"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>11:45 - 12:15</div>
                             <h4>Deep learning-based super-resolution of climate forecast data</h4>
@@ -2287,7 +2287,6 @@ Requisitos: ordenador con conexión a internet, acceso a una consola de git, cue
     </section>
     <!--End Shedule Section -->
 
-      
 <!-- SECCION TALLER DE PYLADIES  -->
 <section class="clients-section style-three" style="background-image: url(images/background/9.jpg);"
         id="tallerpyladies">
