--- a/index.html
+++ b/index.html
@@ -2211,7 +2211,7 @@
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Diego García Díaz"></figure>
+                          <figure class="thumbs-box"><img src="images/diego_garcia_diaz.jpg" alt="Diego García Díaz"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>09:45 - 10:15</div>
                             <h4>Mapeando fenología desde el cielo</h4>
