--- a/index.html
+++ b/index.html
@@ -1361,7 +1361,7 @@
                       <!-- Shedule Block -->
                       <div class="shedule-block">
                         <div class="inner-box clearfix">
-                          <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="Héctor Canto"></figure>
+                          <figure class="thumbs-box"><img src="images/hector_canto.jpg" alt="Héctor Canto"></figure>
                           <div class="content-box">
                             <div class="date"><span class="icon far fa-clock"></span>10:55 - 11:25</div>
                             <h4>Testing efectivo con pytest</h4>
