--- a/index.html
+++ b/index.html
@@ -662,17 +662,17 @@
                     <!-- Shedule Block -->
                     <div class="shedule-block">
                       <div class="inner-box clearfix">
-                        <figure class="thumbs-box"><img src="images/resource/thumb-1.jpg" alt="..."></figure>
+                        <figure class="thumbs-box"><img src="images/pyladies_madrid.jpg" alt="..."></figure>
                         <div class="content-box">
                           <div class="date"><span class="icon far fa-clock"></span>16:00 - 20:00</div>
-                          <h4><a href="#">Taller Flask</a></h4>
+                          <h4><a href="#">Taller Django</a></h4>
                             <!--
                             <div class="collapse multi-collapse" id="collapseDescriptionViernes">...</div>
-                            <ul class="shedule-info clearfix">
-                              <li><span>por</span> <a href="#">...</a></li>
-                              <li><i class="fab fa-twitter"></i>...</li>
-                            </ul>
                             -->
+                            <ul class="shedule-info clearfix">
+                              <li><span>por</span> <a href="https://www.meetup.com/PyLadiesMadrid/">PyLadies Madrid</a></li>
+                              <li><a href="https://twitter.com/PyLadiesMadrid"><i class="fa fa-twitter" aria-hidden="true"></i> PyLadiesMadrid</a></li>
+                            </ul>
                         </div>
                         <!--
                         <div class="btn-box">
