Agregar botón lee más apuntando a la sección del taller

--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -674,11 +674,9 @@
                               <li><a href="https://twitter.com/PyLadiesMadrid"><i class="fa fa-twitter" aria-hidden="true"></i> PyLadiesMadrid</a></li>
                             </ul>
                         </div>
-                        <!--
                         <div class="btn-box">
-                            <a class="theme-btn btn-style-three" data-toggle="collapse" href="#collapseDescriptionViernes" role="button" aria-expanded="false" aria-controls="collapseDescriptionViernes">Lee más</a>
+                            <a class="theme-btn btn-style-three" role="button" href="#tallerpyladies">Lee más</a>
                         </div>
-                        -->
                       </div>
                     </div>
                   </div>
