--- a/gen_programa/base.html
+++ b/gen_programa/base.html
@@ -656,6 +656,7 @@
                     </ul>
                 </div>
 
+                <h3>El horario de las charlas está en la <a href="https://time.is/CEST">zona horaria CEST</a></h3>
                 <div class="tabs-content">
                   <!--Tab Viernes -->
                   <div class="tab active-tab" id="tab1">
